alignment issue done

--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -5,16 +5,18 @@
   max-width: 1200px;
   margin: 0 auto;
   overflow: hidden;
-  height: 60vh;
+  height: 50vh;
 }
 
 .carousel-slides {
   display: flex;
   transition: transform 0.5s ease;
+  height: 100%;
 }
 
 .carousel-slide {
   min-width: 100%;
+  height:100%;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -43,7 +45,24 @@ img {
   transform: translateX(-50%);
   text-align: center;
   color: white;
+  background-color: rgba(0, 0, 0, 0.1); // Add semi-transparent background
+  padding: 10px;
+  border-radius: 8px;
 }
+
+.turf-name {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0;
+  color: #f8b319;
+}
+
+.turf-description {
+  font-size: 1rem;
+  margin: 5px 0;
+  line-height: 1.4;
+}
+
 
 .arrow-left,
 .arrow-right {
@@ -55,7 +74,7 @@ img {
   border-radius: 50%;
   cursor: pointer;
   transform: translateY(-50%);
-  z-index: 10;
+  z-index: 0;
 }
 
 .arrow-left {
@@ -70,6 +89,7 @@ img {
   display: flex;
   justify-content: center;
   margin-top: 10px;
+
 }
 
 .pagination-dots span {
